--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [ProjectSettings]
 ProjectID=(A=1823396784,B=1298598689,C=1743498150,D=-2048051708)
-ProjectName=Stealth Game
+ProjectName=First Person Template
 
 
 [/Script/EngineSettings.GeneralProjectSettings]
